# sscma-example-sg200x

./: .gitignore  README.md
cmake/: project.cmake
components/SeSg/: README.md
components/SeSg/stream_rtsp/: CMakeLists.txt  README.md
components/SeSg/stream_rtsp/include/sesg/: stream_rtsp.h
components/SeSg/stream_rtsp/src/: stream_rtsp.cpp
components/SeSg/stream_udp/: CMakeLists.txt  README.md
components/SeSg/stream_udp/include/sesg/: stream_udp.h
components/SeSg/stream_udp/src/: stream_udp.cpp
components/SeSg/udp_service/: CMakeLists.txt  README.md
components/SeSg/udp_service/src/: udp_service.cpp
components/SeSg/vpss/: CMakeLists.txt  README.md
components/SeSg/vpss/src/: vpss.c
docs/: sesg_stream_udp.md
solutions/: .gitignore
solutions/cls_test/: CMakeLists.txt  README.md  test_models.sh
solutions/cls_test/main/: CMakeLists.txt  camera_test.cpp  main.cpp  yolov8_postprocess.cpp  yolov8_postprocess.h
solutions/cosg-project/face-analysis/: CMakeLists.txt
solutions/cosg-project/ppocr-reader/: CMakeLists.txt
solutions/cosg-project/ppocr-reader/main/: main.cpp  ocr_pipeline.cpp  text_recognizer.cpp
solutions/cosg-project/yolo26-detector/: CMakeLists.txt
solutions/helloworld/: CMakeLists.txt
solutions/helloworld/main/: CMakeLists.txt
solutions/model_detector/main/: main.cpp
solutions/nonsquare_bypass_detector/: CMakeLists.txt
solutions/nonsquare_bypass_detector/main/: CMakeLists.txt  main.cpp  yolov8_postprocess.cpp  yolov8_postprocess.h
solutions/sesg-project/depth_anything_npu/: CMakeLists.txt  README.md
solutions/sesg-project/depth_anything_npu/main/: CMakeLists.txt  main.cpp
solutions/sesg-project/face_rtsp/: README.md
solutions/sesg-project/face_rtsp/main/: emotion_runner.cpp  main.cpp
solutions/sesg-project/face_udp/: udp_receiver.py
solutions/sesg-project/face_udp/main/: detector_utils.h  face_types.h  frame_queue.h
solutions/sesg-project/groove_features/: README.md
solutions/sesg-project/groove_features/tools/: udp_receiver.py
solutions/sesg-project/jpeg_udp/: recv_jpeg_udp.py
solutions/sesg-project/onvif_yolo/: .gitignore  CMakeLists.txt  README.md  onvif_client.py
solutions/sesg-project/onvif_yolo/evidence/: onvif_acceptance.txt
solutions/sesg-project/onvif_yolo/main/: CMakeLists.txt  font5x7.h  main.cpp  onvif_service.cpp  onvif_service.h
solutions/sesg-project/onvif_yolo/wiki/: DEPLOY_REPORT.md  onvif_yolo_Demo_Wiki.md
solutions/sesg-project/opencv-qrcode/main/: CMakeLists.txt  main.cpp
solutions/sesg-project/qrcode-udp/: README.md
solutions/sesg-project/qrcode-udp/main/: CMakeLists.txt  main.cpp
solutions/sesg-project/rtmp_yolo/: CMakeLists.txt  README.md  rtmp_receiver.py  run_rtmp.sh
solutions/sesg-project/rtmp_yolo/evidence/: rtmp_acceptance.txt
solutions/sesg-project/rtmp_yolo/main/: CMakeLists.txt  coco_labels.h  main.cpp
solutions/sesg-project/rtmp_yolo/wiki/: DEPLOY_REPORT.md  rtmp_yolo_Demo_Wiki.md
solutions/sesg-project/udp_detector/: CMakeLists.txt
solutions/sesg-project/udp_detector/main/: CMakeLists.txt
solutions/sesg-projet/face_rtsp/: CMakeLists.txt  rtsp_receiver.py  udp_receiver.py
solutions/sesg-projet/face_rtsp/main/: CMakeLists.txt  age_gender_race_runner.cpp  emotion_runner.h
solutions/sesg-projet/face_udp/: CMakeLists.txt  README.md
solutions/sesg-projet/face_udp/main/: CMakeLists.txt  age_gender_race_runner.cpp  age_gender_race_runner.h  detector_utils.cpp  emotion_runner.cpp  main.cpp
solutions/sesg-projet/groove_features/: CMakeLists.txt
solutions/sesg-projet/groove_features/main/: CMakeLists.txt  main.cpp
solutions/sesg-projet/jpeg_udp/: CMakeLists.txt  README.md
solutions/sesg-projet/jpeg_udp/main/: main.cpp
solutions/sesg-projet/opencv-qrcode/: CMakeLists.txt  README.md
solutions/sesg-projet/opencv-qrcode/main/: CMakeLists.txt
solutions/sesg-projet/qrcode-udp/: CMakeLists.txt
solutions/sesg-projet/qrcode-udp/main/: MatSource.cpp
solutions/sesg-projet/qrcode-udp/tools/: udp_receiver.py
solutions/sesg-projet/test/jpge_delay/: CMakeLists.txt  README.md  echo_jpeg_udp.py
solutions/sesg-projet/udp_detector/: README.md
solutions/sesg-projet/udp_detector/main/: main.cpp
solutions/sesg-projet/udp_detector/tools/: udp_receiver.py
test/reachy_mini/: Reachy Mini Production Line Quality Inspection Fixture EN.md  Reachy Mini Production Line Quality Inspection Fixture.md
(+6 files in other folders)
